[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/interface/missingno.png" type="Texture" id=1]
[ext_resource path="res://theme/monsterfangen.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/PartyScreenMonsterpanel/PartyScreenMonsterpanel.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.368627, 0.505882, 0.67451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.447059, 0.611765, 0.772549, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MonsterPanel" type="PanelContainer"]
anchor_right = 0.96
anchor_bottom = 0.105
rect_min_size = Vector2( 0, 84 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 374.0
margin_bottom = 74.0
theme = ExtResource( 2 )
custom_constants/separation = 8

[node name="Sprite" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="InfoGrid" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 364.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/InfoGrid"]
margin_right = 292.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="monster_name" type="Label" parent="HBoxContainer/InfoGrid/HBoxContainer"]
margin_right = 256.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/InfoGrid/HBoxContainer"]
margin_left = 260.0
margin_right = 292.0
margin_bottom = 15.0
size_flags_vertical = 0

[node name="monster_level" type="Label" parent="HBoxContainer/InfoGrid/HBoxContainer/HBoxContainer"]
margin_right = 21.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Lv ?"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_gender" type="Label" parent="HBoxContainer/InfoGrid/HBoxContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 32.0
margin_bottom = 15.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "?"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_progressbar" type="ProgressBar" parent="HBoxContainer/InfoGrid"]
margin_top = 22.0
margin_right = 292.0
margin_bottom = 37.0
size_flags_horizontal = 3
value = 50.0

[node name="monster_hp" type="Label" parent="HBoxContainer/InfoGrid"]
margin_top = 41.0
margin_right = 292.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "??? / ???"
align = 1
